created vehicle schema

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,8 @@
       <h1>Welcome to Maintenance Tracker</h1>
       <nav>
         <ul>
-          <li><a href="/vehicles"></a>Vehicles</li>
-          <li><a href="/services"></a>Services</li>
+          <li><a href="/vehicles">Vehicles</a></li>
+          <li><a href="/services">Services</a></li>
         </ul>
       </nav>
     </header>
