--- a/views/vehicles/show.ejs
+++ b/views/vehicles/show.ejs
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Show Page for <%=vehicle.name%></h1>
+			<h1>Show Page</h1>
 			<nav>
 				<ul>
 					<li>
@@ -22,9 +22,17 @@
 			<section>
 				<h2>Vehicle Attributes:</h2>
 				<ul>
-					<li>Name: <%=vehicle.name%></li>
-          <!-- add other vehicle info -->
+					<li>Make:</li>
+        	<!-- add other vehicle info -->
 				</ul>
+			</section>
+			<section>
+    		<form action="/vehicles/<%=vehicle[i].id%>?_method=DELETE" method="POST">
+        	<input type="submit" value="Delete Vehicle"/>
+    		</form>
+			</section>
+			<section>
+				<a href="/vehicles/<%=vehicle[i].id%>/edit">Edit</a>
 			</section>
 		</main>
 	</body>
