--- a/views/vehicles/index.ejs
+++ b/views/vehicles/index.ejs
@@ -11,10 +11,10 @@
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="/vehicles/edit.ejs">Edit Vehicle</a></li>
-          <li><a href="/vehicles/new.ejs">Add Vehicle</a></li>
-          <li><a href="/vehicles/show.ejs">Show Vehicle</a></li>
-          <li><a href="/vehicles/index.ejs">Created Vehicle</a></li>
+          <li><a href="/vehicles/edit">Edit Vehicle</a></li>
+          <li><a href="/vehicles/new">Add Vehicle</a></li>
+          <li><a href="/vehicles/show">Show Vehicle</a></li>
+          <li><a href="/vehicles/index">Created Vehicle</a></li>
         </ul>
       </nav>
     </header>
