--- a/views/vehicles/new.ejs
+++ b/views/vehicles/new.ejs
@@ -15,7 +15,7 @@
       </nav>
     </header>
     <main>
-      <form action="/vehicles" method="POST">
+      <form action="/vehicles/" method="POST">
         Make: <input type="text" name="make" /><br/>
         Model: <input type="text" name="model" /><br/>
         Year: <input type="text" name="year" /><br/>
