--- a/views/vehicles/new.ejs
+++ b/views/vehicles/new.ejs
@@ -18,9 +18,9 @@
       <form action="/vehicles/" method="POST">
         Make: <input type="text" name="make" /><br/>
         Model: <input type="text" name="model" /><br/>
-        Year: <input type="text" name="year" /><br/>
+        Year: <input type="number" name="year" /><br/>
         Color: <input type="text" name="color" /><br/>
-        Current Mileage: <input type="text" name="mileage" /><br/>
+        Current Mileage: <input type="number" name="mileage" /><br/>
         <input type="submit" value="Add Vehicle">
       </form>
     </main>
