all routes working starting some layout styling'

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,15 +4,24 @@
     <meta charset="utf-8">
     <title></title>
   </head>
+  <nav>
+    <ul>
+      <li>
+        <a href="/">Home</a>
+      </li>
+      <li>
+        <a href="/vehicles">Vehicle Index</a>
+      </li>
+    </ul>
+  </nav>
   <body>
     <header>
-      <h1>Welcome to Maintenance Tracker</h1>
-      <nav>
-        <ul>
-          <li><a href="/vehicles">Vehicles</a></li>
-          <li><a href="/services">Services</a></li>
-        </ul>
-      </nav>
     </header>
+    <h1>Welcome to Maintenance Tracker</h1>
+    <ul>
+      <li><a href="/vehicles/new">Add New Vehicle</a></li>
+      <li><a href="/vehicles">Vehicles</a></li>
+      <li><a href="/services">Services</a></li>
+    </ul>
   </body>
 </html>
