--- a/views/vehicles/edit.ejs
+++ b/views/vehicles/edit.ejs
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Edit <%=vehicle.year vehicle.make vehicle.model%> 's Info</h1>
+			<h1>Edit <%=vehicle.year%> <%=vehicle.make%> <%=vehicle.model%> 's Info</h1>
 			<nav>
 				<ul>
 					<li>
