--- a/views/vehicles/new.ejs
+++ b/views/vehicles/new.ejs
@@ -5,14 +5,19 @@
     <meta charset="utf-8">
     <title></title>
   </head>
+  <nav>
+    <ul>
+      <li>
+        <a href="/">Home</a>
+      </li>
+      <li>
+        <a href="/vehicles">Vehicle Index</a>
+      </li>
+    </ul>
+  </nav>
   <body>
     <header>
       <h1>Add New Vehicle</h1>
-      <nav>
-        <ul>
-          <li><a href="/">Home</a></li>
-        </ul>
-      </nav>
     </header>
     <main>
       <form action="/vehicles/" method="POST">
