--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,20 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
   </head>
-  <nav>
-    <ul>
-      <li>
-        <a href="/">Home</a>
-      </li>
-      <li>
-        <a href="/vehicles">Vehicle Index</a>
-      </li>
-    </ul>
-  </nav>
+  <header>
+    <nav class="nav-bar">
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/vehicles">Vehicle Index</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
   <body>
-    <header>
-    </header>
     <h1>Welcome to Maintenance Tracker</h1>
     <ul>
       <li><a href="/vehicles/new">Add New Vehicle</a></li>
