--- a/views/vehicles/edit.ejs
+++ b/views/vehicles/edit.ejs
@@ -3,21 +3,23 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 	</head>
+	<header>
+		<nav class="nav-bar">
+			<ul class="nav nav-tabs">
+				<li class="nav-item">
+					<a class="nav-link" href="/">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/vehicles">Vehicle Index</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
 	<body>
-		<header>
 			<h1>Edit <%=vehicle.year%> <%=vehicle.make%> <%=vehicle.model%> 's Info</h1>
-			<nav>
-				<ul>
-					<li>
-						<a href="/">Home</a>
-					</li>
-					<li>
-						<a href="/vehicles">Vehicles Index</a>
-					</li>
-				</ul>
-			</nav>
-		</header>
 		<main>
 			<h2>Vehicle Attributes:</h2>
 			<form action="/vehicles/<%=vehicle._id%>?_method=PUT" method="POST">
