--- a/views/vehicles/index.ejs
+++ b/views/vehicles/index.ejs
@@ -3,12 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
   </head>
+  <header>
+    <nav class="nav-bar">
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/vehicles">Vehicle Index</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
   <body>
-    <header>
       <h1>View Vehicles Page</h1>
-    </header>
-    <main>
+      <main>
       <h2>List of Vehicles</h2>
       <ul>
         <% for(let i = 0; i < vehicles.length; i++){ %>
