--- a/views/services/index.ejs
+++ b/views/services/index.ejs
@@ -3,25 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
-  <nav>
-    <ul>
-      <li>
-        <a href="/">Home</a>
-      </li>
-      <li>
-        <a href="/services">Services</a>
-      </li>
-    </ul>
-  </nav>
+  <header>
+    <nav class="nav-bar">
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/services">Service Index</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
   <body>
-    <header>
+    <div class="">
       <h1>Services</h1>
-      <li>
-        <a href="/services/new">Add New Service</a>
-      </li>
-    </header>
+      <a href="/services/new">Add New Service</a>
+    </div>
     <main>
       <h2>List of Services</h2>
       <ul>
