--- a/views/services/new.ejs
+++ b/views/services/new.ejs
@@ -3,14 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
+  <header>
+    <nav class="nav-bar">
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/services">Service Index</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
   <body>
-    <header>
-      <h1>Add Service to Record</h1>
-    </header>
+    <h1>Add Service to Record</h1>
     <main>
       <form action="/services" method="POST">
+        Category <select name="category">
+          <% for(let i = 0; i < categories.length; i++) { %>
+            <option value="<%=categories[i]%>"><%=categories[i]%></option>
+          <% } %>
+        </select>
         Service Description <input type="text" name="description"/>
         Mileage Completed <input type="number" name="mileage"/>
         Date Completed <input type="date" name="date"/>
