--- a/views/services/show.ejs
+++ b/views/services/show.ejs
@@ -3,22 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
-  <nav>
-    <ul>
-      <li>
-        <a href="/">Home</a>
-      </li>
-      <li>
-        <a href="/services">Services</a>
-      </li>
-    </ul>
-  </nav>
+  <header>
+    <nav class="nav-bar">
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/services">Services</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
   <body>
-    <header>
-      <h1><%=service.description%></h1>
-    </header>
+  <h1><%=service.category%></h1>
     <main>
       <section>
         <%=service.mileage%>
