--- a/views/services/new.ejs
+++ b/views/services/new.ejs
@@ -22,6 +22,11 @@
     <h1>Add Service to Record</h1>
     <main>
       <form action="/services" method="POST">
+        Vehicle <select name="vehicleId">
+          <% for(let i = 0; i < vehicles.length; i++) { %>
+            <option value="<%=vehicles[i]._id%>"><%=vehicles[i].make%></option>
+          <% } %>
+        </select>
         Category <select name="category">
           <% for(let i = 0; i < categories.length; i++) { %>
             <option value="<%=categories[i]%>"><%=categories[i]%></option>
