--- a/views/vehicles/index.ejs
+++ b/views/vehicles/index.ejs
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <script src="app.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -19,13 +21,12 @@
     </nav>
   </header>
   <body>
-      <h1>View Vehicles Page</h1>
+      <h1>Current Vehicles</h1>
       <main>
-      <h2>List of Vehicles</h2>
       <ul>
         <% for(let i = 0; i < vehicles.length; i++){ %>
           <li>
-            <a href="/vehicles/<%=vehicles[i].id%>"><%=vehicles[i].year%> <%=vehicles[i].make%> <%=vehicles[i].model%></a>
+            <h4><a href="/vehicles/<%=vehicles[i].id%>"><%=vehicles[i].year%> <%=vehicles[i].make%> <%=vehicles[i].model%></a></h4>
           </li>
         <% } %>
       </ul>
