--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,27 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <script src="app.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
   </head>
   <header>
-    <nav class="nav-bar">
-      <ul class="nav nav-tabs">
-        <li class="nav-item">
-          <a class="nav-link" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/vehicles">Vehicle Index</a>
-        </li>
-      </ul>
-    </nav>
   </header>
   <body>
     <h1>Welcome to Maintenance Tracker</h1>
     <ul>
       <li><a href="/vehicles/new">Add New Vehicle</a></li>
-      <li><a href="/vehicles">Vehicles</a></li>
-      <li><a href="/services">Services</a></li>
+      <li><a href="/services/new">Add Service</a></li>
+      <li><a href="/vehicles">View Vehicles</a></li>
     </ul>
   </body>
 </html>
