--- a/views/services/index.ejs
+++ b/views/services/index.ejs
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  </head>
-  <header>
-    <nav class="nav-bar">
-      <ul class="nav nav-tabs">
-        <li class="nav-item">
-          <a class="nav-link" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/services">Service Index</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title></title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+	</head>
+	<header>
+		<nav class="nav-bar">
+			<ul class="nav nav-tabs">
+				<li class="nav-item">
+					<a class="nav-link" href="/">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/vehicles">View Vehicles</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/services">Recent Services</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
   <body>
     <div class="">
       <h1></h1>
     </div>
     <main>
-      <h2>Services Performed</h2>
+      <h2>Recently Added Services</h2>
         <ul>
           <% for(let i = 0; i < services.length; i++){ %>
 			      <li>
-				      <a href="/services/<%=services[i]._id%>"><%=services[i].category%></a>
+				      <a href="/services/<%=services[i]._id%>"><%=services[i].category%> at  <%=services[i].mileage%> miles</a>
 			      </li>
 		      <% } %>
         </ul>
