--- a/views/vehicles/edit.ejs
+++ b/views/vehicles/edit.ejs
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	</head>
 	<header>
@@ -12,7 +13,10 @@
 					<a class="nav-link" href="/">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/vehicles">Vehicle Index</a>
+					<a class="nav-link" href="/vehicles">View Vehicles</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/services">Recent Services</a>
 				</li>
 			</ul>
 		</nav>
