--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,16 +3,25 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="public/style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   </head>
   <header>
   </header>
   <body>
-    <h1>Welcome to Maintenance Tracker</h1>
-    <ul>
-      <li><a href="/vehicles/new">Add New Vehicle</a></li>
-      <li><a href="/vehicles">View Vehicles</a></li>
-    </ul>
+    <main>
+      <h1 class="page-title">Welcome to Maintenance Tracker</h1>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            <a class="col-sm links" href="/vehicles/new">Add New Vehicle</a>
+          </div>
+          <div class="col-sm">
+            <a class="col-sm links" href="/vehicles">View Vehicles</a>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
