--- a/views/vehicles/edit.ejs
+++ b/views/vehicles/edit.ejs
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title></title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<link rel="stylesheet" href="public/style.css">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	</head>
 	<header>
@@ -22,8 +23,8 @@
 		</nav>
 	</header>
 	<body>
-			<h1>Edit <%=vehicle.year%> <%=vehicle.make%> <%=vehicle.model%> 's Info</h1>
 		<main>
+			<h1>Edit <%=vehicle.year%> <%=vehicle.make%> <%=vehicle.model%> 's Info</h1>
 			<h2>Vehicle Attributes:</h2>
 			<form action="/vehicles/<%=vehicle._id%>?_method=PUT" method="POST">
         Make: <input type="text" name="make" value="<%=vehicle.make%>"/><br/>
