--- a/views/vehicles/show.ejs
+++ b/views/vehicles/show.ejs
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title></title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<link rel="stylesheet" href="/public/style.css">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	</head>
 	<header>
@@ -22,8 +23,8 @@
 		</nav>
 	</header>
 	<body>
-			<h1>Your <%=vehicle.make%>'s Details</h1>
 		<main>
+			<h1>Your <%=vehicle.make%>'s Details</h1>
 			<section>
 				<h2><%=vehicle.make%> <%=vehicle.model%></h2>
 					<p><%=vehicle.year%> <%=vehicle.color%> <%=vehicle.mileage%></p>
